Bug 111483 - FILEOPEN: Ole object not displayed (gtk3)
Summary: FILEOPEN: Ole object not displayed (gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bibisectRequest, regression
Depends on:
Blocks: GTK3 OLE-Objects
  Show dependency treegraph
 
Reported: 2017-08-08 09:55 UTC by Xisco Faulí
Modified: 2021-07-31 03:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (219.00 KB, application/msword)
2017-08-08 09:55 UTC, Xisco Faulí
Details
Screenshot (where it can be seen?) (188.47 KB, image/png)
2017-08-13 04:36 UTC, Aron Budea
Details
How it looks with GTK3 (18.24 KB, image/png)
2017-08-14 09:01 UTC, Xisco Faulí
Details
the wmf inside the doc that has the problem (93.11 KB, image/wmf)
2017-09-04 11:35 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-08-08 09:55:24 UTC
Created attachment 135266 [details]
sample

Steps to reproduce:
1. Open attached document

Observed behaviour: Ole object on top left corner is empty

Reproduced in

Versió: 6.0.0.0.alpha0+
ID de la construcció: 0342c5e8086c8200ecadbe9d52dd4ef6a093effb
CPU threads: 4; OS: Linux 4.10; UI render: per defecte; VCL: gtk3; 
Configuració local: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-08-08 09:57:53 UTC
Regression introduced in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=7289a140fc68dc898ba2b2357cc960968195f236..766524b13b3e69cc16cf19b826f62222d7f15ea5

Bibisected with lo-linux-dbgutil-daily-till52
Comment 2 Jacques Guilleron 2017-08-08 11:04:23 UTC
Hi Xisco,

Ole Object is there in
LO 6.0.0.0.alpha0+ Build ID: 88179e3de8865ea07d5017ca0723afd10ad44ba7
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-06_23:49:25
Locale: fr-FR (fr_FR); Calc: CL

Linux only?
Comment 3 Xisco Faulí 2017-08-08 11:14:32 UTC
True.

it's displayed in

Version: 6.0.0.0.alpha0+
Build ID: aa084cc1dcb518ffc1984e122abbf4401c4d0ce0
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-08_01:05:21
Locale: es-ES (es_ES); Calc: group
Comment 4 Aron Budea 2017-08-13 04:36:53 UTC
Created attachment 135510 [details]
Screenshot (where it can be seen?)

What should not be displayed? If it's the image in the top left corner, which is indeed an embedded document, I'm able to see it (I believe it's a stored emf rendering of it that is shown). This is with a daily build from a few days ago in Linux.
Comment 5 Jacques Guilleron 2017-08-13 05:39:55 UTC
Hi all,

Let's close the report as NOTABUG.

Have a good day.
Comment 6 Xisco Faulí 2017-08-14 09:01:14 UTC
Created attachment 135540 [details]
How it looks with GTK3

Actually it seems to be gtk3 only:

Version: 6.0.0.0.alpha0+
Build ID: ef2e6260fad38e26c8591ea88ded348db618270d
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 7 Buovjaga 2017-08-30 15:35:20 UTC
Yep, confirmed.

If you double-click it to open and then close the window, it is shown in the document.

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha0+
Build ID: 507247697dc6c4a41fe17a29d522511f97040738
CPU threads: 8; OS: Linux 4.12; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 29th 2017
Comment 8 Caolán McNamara 2017-09-04 11:35:30 UTC
Created attachment 136004 [details]
the wmf inside the doc that has the problem
Comment 9 Caolán McNamara 2017-09-04 13:00:03 UTC
seems that 1 bit bitmap has non-standard indexes for white/black
Comment 10 Commit Notification 2017-09-04 15:23:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3cb59bff332b02f607d15b5ed41b4438e8102980

Resolves: tdf#111483 1 bit bitmaps with non-standard black/white indexes

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2017-09-06 20:47:21 UTC
Verified in

Version: 6.0.0.0.alpha0+
Build ID: 383aab7ed63bf30931c1cf89138707d2228b5dce
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group