Resolves: tdf#111483 1 bit bitmaps with non-standard black/white indexes

can be left "untoggled" when converted to cairo A1

Change-Id: I18f3e2109cd4b57bce584545090e26c931de1200
Reviewed-on: https://gerrit.libreoffice.org/41895
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>